By default load only 100 results and add the option to load all of them. Using maximum screen space in index page. Fixing small visual bug with scrollbars.

--- a/notebooker/web/static/notebooker/one_click_notebooks.css
+++ b/notebooker/web/static/notebooker/one_click_notebooks.css
@@ -27,7 +27,16 @@ code {
 .ui.sidebar {
     overflow: visible !important;
 }
-.scrolledTable{ overflow-y: auto; clear:both; }
+
+.scrolledTable{
+    overflow-y: auto;
+    clear:both;
+}
+
+.ui.table {
+    width: 99.5%;  /* Because a border with overflow-y:auto causes a tiny scrollbar */
+}
+
 .ui.inverted.dropdown .item {
     color: white;
 }
